# peek-o-display

./: README.md  devenv.nix  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
addon-pcb-template/: peek-o-display-addon-template.kicad_pcb  peek-o-display-addon-template.kicad_pro  peek-o-display-addon-template.kicad_sch
bsp/: Cargo.toml  rust-toolchain.toml
bsp/examples/demo-firmware/: Cargo.toml
bsp/examples/demo-firmware-pico2/: Cargo.toml
bsp/examples/demo-firmware/src/: main.rs
bsp/examples/kitchen-sink-rp2040/: Cargo.toml
bsp/examples/kitchen-sink-rp2040/src/: main.rs
bsp/examples/kitchen-sink-rp235xa/: Cargo.toml
bsp/examples/kitchen-sink-rp235xa/src/: main.rs
bsp/examples/mousefood-rp235xa/: Cargo.toml
bsp/examples/mousefood-rp235xa/src/: main.rs
bsp/examples/steal-rp2040/: Cargo.toml
bsp/examples/steal-rp2040/src/: main.rs
bsp/examples/touch-calibration-rp2040/: Cargo.toml
bsp/examples/touch-calibration-rp2040/src/: main.rs
bsp/examples/touch-calibration-rp235xa/: Cargo.toml
bsp/examples/touch-calibration-rp235xa/src/: main.rs
bsp/examples/wip-demo-rp2040/: Cargo.toml
bsp/examples/wip-demo-rp2040/src/: main.rs
bsp/examples/wip-demo-rp235xa/: Cargo.toml
bsp/examples/wip-demo-rp235xa/src/: main.rs
bsp/src/: display.rs  lib.rs  peripherals.rs  sdcard.rs  touch.rs
case/: template.scad
pcb/: fp-lib-table  peek-o-display.kicad_pcb  peek-o-display.kicad_pro  peek-o-display.kicad_sch  sym-lib-table
pcb/fab/: .gitignore
pcb/lib/Display/: Display.kicad_sym
pcb/lib/Display/Display.pretty/: ILI9341_2.8in_with_touch_and_sd.kicad_mod
