[package]
name = "peek-o-display-bsp"
version = "0.1.0"
edition = "2024"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
license = "MIT"

[features]
rp2040 = ["embassy-rp/rp2040"]
rp235xa = ["embassy-rp/rp235xa"]

[dependencies]
defmt = "1.0.1"
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = "0.7.0"
embassy-time = "0.5.0"
embedded-hal = "1.0.0"
embedded-sdmmc = { version = "0.9.0", default-features = false, features = ["defmt-log"] }
mipidsi = "0.9.0"
portable-atomic = { version = "1.11.1", default-features = false, features = ["critical-section"] }
static_cell = "2.1.1"
