[package]
name = "peek-o-display-demo-firmware"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2021"
license = "MIT"

[dependencies]
cortex-m-rt = "0.7.5"
embassy-rp = { version = "0.4.0", features = ["rp235xa", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = "0.4.0"
embassy-sync = "0.6.1"
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
# static_cell = "2.1.0"
assign-resources = "0.4.1"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = { package = "embedded-hal", version = "1.0.0" }
# embedded-hal-p2 = { package = "embedded-hal", version = "0.2.0" }

# Display
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"

# SD card
embedded-sdmmc = { version = "0.8.1", default-features = false, features = ["defmt-log"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
