[package]
name = "peek-o-display-mousefood-example"
version = "0.1.0"
edition = "2024"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
license = "MIT"

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = "0.4.0"
embedded-graphics = "0.8.1"
mousefood = { git = "https://github.com/j-g00da/mousefood", revision = "8d05b0255528c8b56cd8bf880484a5336ee06f02" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
peek-o-display-bsp = { path = "../../", features = ["rp235xa"] }
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
ratatui = { version = "0.30.0-alpha.5", default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
